# ubd_scene_image_comparator

./: CMakeLists.txt  package.xml  setup.py
msg/: UbdSceneAccuracy.msg  UbdSceneImgLog.msg
scripts/: reset_annotator.py  view_accuracy.py
src/ubd_scene_image_comparator/: annotator.py  logger.py
